--- a/open_cv_Filters.ipynb
+++ b/open_cv_Filters.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMAvdYoWFaij4aRhifmr5fl",
+      "authorship_tag": "ABX9TyOx9AuQSAnd6RZL3uj7nnwI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,10 +29,47 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**This code processes an image named 'lip2.jpg' using various image filtering techniques and displays the results using OpenCV's imshow function.**"
+        "# Image Filtering and Blurring with OpenCV\n",
+        "This Python script demonstrates various image filtering and blurring techniques using OpenCV library.\n",
+        "\n",
+        "## Description\n",
+        "The script loads an image from file (\"lip2.jpg\"), applies different filtering and blurring techniques, and displays the original and processed images side by side. The techniques used include:\n",
+        "- Custom 2D Filter\n",
+        "- 2D Box (Average) Blur\n",
+        "- 2D Gaussian Blur\n",
+        "- Median Blur\n",
+        "- Bilateral Filter\n",
+        "\n",
+        "## Libraries Used\n",
+        "- OpenCV (cv2): Used for image loading, filtering, blurring, and display.\n",
+        "- NumPy (np): Used for array manipulation.\n",
+        "\n",
+        "## Usage\n",
+        "1. Ensure that the \"lip2.jpg\" image file is in the same directory as the script.\n",
+        "2. Run the script.\n",
+        "3. A window will appear displaying the original and processed images using various techniques.\n",
+        "4. Press any key to close the image display windows.\n",
+        "\n",
+        "## Implementation Details\n",
+        "1. The script uses OpenCV to load the \"lip2.jpg\" image.\n",
+        "2. Different filtering and blurring techniques are applied to the loaded image.\n",
+        "3. The resulting images are displayed side by side using `cv2.imshow`.\n",
+        "4. The original image and processed images are displayed in separate windows.\n",
+        "5. Press any key to close the image display windows.\n",
+        "\n",
+        "## Note\n",
+        "Ensure that the required libraries (OpenCV, NumPy) are installed in your Python environment before running the script. You should have the \"lip2.jpg\" image file in the same directory as the script.\n",
+        "\n",
+        "## References\n",
+        "- OpenCV: https://opencv.org/\n",
+        "- NumPy: https://numpy.org/\n",
+        "\n",
+        "## Author\n",
+        "[HG]\n",
+        "[https://github.com/Magaton1010/image-analysis]\n"
       ],
       "metadata": {
-        "id": "cA0OlLV5SwVA"
+        "id": "sicUMHZaf37J"
       }
     },
     {
